<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to SS12 Flashcard!</string>
    <string name="app_name">SS12 Flashcards</string>
    <string name="dashboard_browse">Browse</string>
    <string name="dashboard_create">Create</string>
    <string name="dashboard_signout">Sign Out</string>
    <string name="dashboard_about">About</string>
    <string name="dashboard_option">Option</string>
    <string name="dashboard_action">Action</string>
    <string name="description_logo">SS12 Flashcards</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>
    <string name="now_playing_loading">Looking up nearby sessions\u2026</string>
</resources>
